python for data

--- a/python-for-data-engineering/numpy_basics.ipynb
+++ b/python-for-data-engineering/numpy_basics.ipynb
@@ -1,9 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e510963a",
+   "metadata": {},
+   "source": [
+    "\"Hello\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8047a1a5",
+   "metadata": {},
+   "source": [
+    "### Hello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee139b56",
+   "metadata": {},
+   "source": [
+    "## Hello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16140a9",
+   "metadata": {},
+   "source": [
+    "# Hello"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cced711",
+   "id": "a9a55131",
    "metadata": {},
    "outputs": [],
    "source": []
