--- a/python-for-data-engineering/scrape_amazon_data_using_Python.ipynb
+++ b/python-for-data-engineering/scrape_amazon_data_using_Python.ipynb
@@ -10,24 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.1.tar.gz (1.1 kB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: bs4 in c:\\users\\tanvi\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.0.1)\n",
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\tanvi\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from bs4) (4.12.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\tanvi\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from beautifulsoup4->bs4) (2.4)\n",
-      "Building wheels for collected packages: bs4\n",
-      "  Building wheel for bs4 (pyproject.toml): started\n",
-      "  Building wheel for bs4 (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for bs4: filename=bs4-0.0.1-py3-none-any.whl size=1266 sha256=108e680d8a46adfe12e8038c0053fe32fd110e12c36115362df6c77ea679db38\n",
-      "  Stored in directory: c:\\users\\tanvi\\appdata\\local\\pip\\cache\\wheels\\d4\\c8\\5b\\b5be9c20e5e4503d04a6eac8a3cd5c2393505c29f02bea0960\n",
-      "Successfully built bs4\n",
-      "Installing collected packages: bs4\n",
-      "Successfully installed bs4-0.0.1\n"
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\tanvi\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from beautifulsoup4->bs4) (2.4)\n"
      ]
     }
    ],
@@ -84,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "6d304653",
    "metadata": {},
    "outputs": [],
@@ -96,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "aa981130",
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = \"https://www.amazon.com/s?k=playstation+4&sprefix=play%2Caps%2C406&ref=nb_sb_ss_ts-doa-p_4_4\""
+    "URL = \"https://www.amazon.com/s?k=playstation+5&crid=2V19Y6UPWGOJ4&sprefix=playstation+5%2Caps%2C303&ref=nb_sb_noss_2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "4841834a",
    "metadata": {},
    "outputs": [],
@@ -117,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "e8ee14a9",
    "metadata": {},
    "outputs": [],
@@ -128,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "5fe11556",
    "metadata": {},
    "outputs": [
@@ -138,7 +123,7 @@
        "bytes"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "d9858292",
    "metadata": {},
    "outputs": [],
@@ -160,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "4c85b03c",
    "metadata": {},
    "outputs": [],
@@ -171,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "c302d6b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "link = links[0].get('href')"
+    "link = links[1].get('href')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "540fce76",
    "metadata": {},
    "outputs": [],
@@ -191,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "662472e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://amazon.com/gp/slredirect/picassoRedirect.html/ref=pa_sp_atf_aps_sr_pg1_1?ie=UTF8&adId=A04791071UKS70KQU75CA&qualifier=1685197413&id=2518585946303924&widgetName=sp_atf&url=%2FSonic-Origins-Plus-PlayStation-4%2Fdp%2FB0BZFKBL8L%2Fref%3Dsr_1_1_sspa%3Fkeywords%3Dplaystation%2B4%26qid%3D1685197413%26sprefix%3Dplay%252Caps%252C406%26sr%3D8-1-spons%26psc%3D1'"
+       "'https://amazon.com/PlayStation-5-Console-CFI-1215A01X/dp/B0BCNKKZ91/ref=sr_1_2?crid=2V19Y6UPWGOJ4&keywords=playstation+5&qid=1687002330&sprefix=playstation+5%2Caps%2C303&sr=8-2'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "26878822",
    "metadata": {},
    "outputs": [],
@@ -222,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "id": "c01224bb",
    "metadata": {},
    "outputs": [
@@ -232,7 +217,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "id": "8d117f70",
    "metadata": {},
    "outputs": [],
@@ -254,34 +239,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "76685a88",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Sonic Origins Plus - PlayStation 4'"
+       "'PlayStation 5 Console (PS5)'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_soup.find('span', attrs={'id': 'productTitle'}).text.strip()"
+    "new_soup.find(\"span\", attrs={\"id\": 'productTitle'}).text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9cb2a15e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$499.00'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_soup.find(\"span\", attrs={\"class\": 'a-price aok-align-center reinventPricePriceToPayMargin priceToPay'}).find(\"span\", attrs={\"class\": 'a-offscreen'}).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c778796b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<span class=\"a-size-base a-color-base\"> $499.00 </span>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_soup.find(\"span\", attrs={\"class\": 'a-size-base a-color-base'})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb2a15e",
+   "id": "ccdc9a3a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "new_soup.find('span', attrs={'id': 'productTitle'}).text.strip()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
