added transformation files

--- a/tokyo-olympic-data-analytics-on-azure-cloud/notebooks/2.TokyoOlympicTransformation.ipynb
+++ b/tokyo-olympic-data-analytics-on-azure-cloud/notebooks/2.TokyoOlympicTransformation.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1bc094c3-a777-4da2-b1ca-fcecb715f022",
+     "nuid": "0a02873d-b867-4e88-9ecd-af12a281a9e4",
      "showTitle": false,
      "title": ""
     }
@@ -19,47 +19,6 @@
    "source": [
     "from pyspark.sql.functions import col\n",
     "from pyspark.sql.types import IntegerType, DoubleType, BooleanType, DateType"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "da9f1407-1f49-442e-8f8d-179c1a446249",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
-    "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"8e515acb-e4db-402f-91e0-cf99752ded42\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": 'Bip8Q~T2GEFJf5Dqhe4vXLp0YMAAnZgE1A.CLcp~',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/61859d99-29f1-417c-8fc2-9e2885ab99c4/oauth2/token\"}\n",
-    "\n",
-    "dbutils.fs.mount(\n",
-    "source = \"abfss://tokyo-olympic-data@tokyoolympicdata2024dl.dfs.core.windows.net\", # contrainer@storageacc\n",
-    "mount_point = \"/mnt/tokyoolympic\",\n",
-    "extra_configs = configs)"
    ]
   },
   {
@@ -97,7 +56,7 @@
        "  th {\n",
        "    text-align: left;\n",
        "  }\n",
-       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>path</th><th>name</th><th>size</th><th>modificationTime</th></tr></thead><tbody><tr><td>dbfs:/mnt/tokyoolympic/raw-data/</td><td>raw-data/</td><td>0</td><td>1705416157000</td></tr><tr><td>dbfs:/mnt/tokyoolympic/transformed-data/</td><td>transformed-data/</td><td>0</td><td>1705416177000</td></tr></tbody></table></div>"
+       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>path</th><th>name</th><th>size</th><th>modificationTime</th></tr></thead><tbody><tr><td>dbfs:/mnt/tokyoolympicdatadl24/raw/Athletes.csv</td><td>Athletes.csv</td><td>407406</td><td>1707693222000</td></tr><tr><td>dbfs:/mnt/tokyoolympicdatadl24/raw/Coaches.csv</td><td>Coaches.csv</td><td>16494</td><td>1707693238000</td></tr><tr><td>dbfs:/mnt/tokyoolympicdatadl24/raw/EntriesGender.csv</td><td>EntriesGender.csv</td><td>1076</td><td>1707693296000</td></tr><tr><td>dbfs:/mnt/tokyoolympicdatadl24/raw/Medals.csv</td><td>Medals.csv</td><td>2320</td><td>1707693254000</td></tr><tr><td>dbfs:/mnt/tokyoolympicdatadl24/raw/Teams.csv</td><td>Teams.csv</td><td>34526</td><td>1707693270000</td></tr></tbody></table></div>"
       ]
      },
      "metadata": {
@@ -113,16 +72,34 @@
        "columnCustomDisplayInfos": {},
        "data": [
         [
-         "dbfs:/mnt/tokyoolympic/raw-data/",
-         "raw-data/",
-         0,
-         1705416157000
+         "dbfs:/mnt/tokyoolympicdatadl24/raw/Athletes.csv",
+         "Athletes.csv",
+         407406,
+         1707693222000
         ],
         [
-         "dbfs:/mnt/tokyoolympic/transformed-data/",
-         "transformed-data/",
-         0,
-         1705416177000
+         "dbfs:/mnt/tokyoolympicdatadl24/raw/Coaches.csv",
+         "Coaches.csv",
+         16494,
+         1707693238000
+        ],
+        [
+         "dbfs:/mnt/tokyoolympicdatadl24/raw/EntriesGender.csv",
+         "EntriesGender.csv",
+         1076,
+         1707693296000
+        ],
+        [
+         "dbfs:/mnt/tokyoolympicdatadl24/raw/Medals.csv",
+         "Medals.csv",
+         2320,
+         1707693254000
+        ],
+        [
+         "dbfs:/mnt/tokyoolympicdatadl24/raw/Teams.csv",
+         "Teams.csv",
+         34526,
+         1707693270000
         ]
        ],
        "datasetInfos": [],
@@ -171,7 +148,7 @@
    ],
    "source": [
     "%fs\n",
-    "ls \"/mnt/tokyoolympic\""
+    "ls \"/mnt/tokyoolympicdatadl24/raw\""
    ]
   },
   {
@@ -201,7 +178,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"/?o=7441469371359626#setting/sparkui/0121-035633-go4h7jdx/driver-2979131047002369626\">Spark UI</a></p>\n",
+       "            <p><a href=\"/?o=8456781820185288#setting/sparkui/0211-224043-wgtqq0ht/driver-1265676209423397063\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -217,10 +194,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7ff2729c1de0>"
+       "<pyspark.sql.session.SparkSession at 0x7f77a07b7e20>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,11 +223,11 @@
    },
    "outputs": [],
    "source": [
-    "athletes = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympic/raw-data/Athletes.csv\")\n",
-    "coaches = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympic/raw-data/Coaches.csv\")\n",
-    "entriesgender = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympic/raw-data/EntriesGender.csv\")\n",
-    "medals = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympic/raw-data/Medals.csv\")\n",
-    "teams = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympic/raw-data/Teams.csv\")"
+    "athletes = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympicdatadl24/raw/Athletes.csv\")\n",
+    "coaches = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympicdatadl24/raw/Coaches.csv\")\n",
+    "entriesgender = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympicdatadl24/raw/EntriesGender.csv\")\n",
+    "medals = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympicdatadl24/raw/Medals.csv\")\n",
+    "teams = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolympicdatadl24/raw/Teams.csv\")"
    ]
   },
   {
@@ -647,7 +624,7 @@
    },
    "outputs": [],
    "source": [
-    "athletes.repartition(1).write.mode(\"overwrite\").option(\"header\",'true').csv(\"/mnt/tokyoolymic/transformed-data/athletes\")"
+    "athletes.repartition(1).write.mode(\"overwrite\").option(\"header\",'true').csv(\"/mnt/tokyoolympicdatadl24/processed/athletes\")"
    ]
   },
   {
@@ -667,10 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "coaches.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/coaches\")\n",
-    "entriesgender.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/entriesgender\")\n",
-    "medals.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/medals\")\n",
-    "teams.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/teams\")"
+    "coaches.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolympicdatadl24/processed/coaches\")"
    ]
   },
   {
@@ -678,9 +652,72 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9e5d1fb3-f785-4c5a-9d17-cdbedbc5e04e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "entriesgender.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolympicdatadl24/processed/entriesgender\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f7ee1fd5-aa37-459d-8cf2-4414f2e544e2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "medals.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolympicdatadl24/processed/medals\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7a35cf62-8261-44bf-99f5-ac32b30ab3d8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "teams.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolympicdatadl24/processed/teams\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2937cba4-a6a6-4e1d-9501-08de39e8d85b",
      "showTitle": false,
      "title": ""
     }
@@ -695,14 +732,14 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 104997742644421,
+     "commandId": 1145534422287976,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Tokyo Olympic Transformation",
+   "notebookName": "2.TokyoOlympicTransformation",
    "widgets": {}
   }
  },
